https://bugs.webkit.org/show_bug.cgi?id=60866 Evaluation order broken for empty alternatives in subpatterns

Rubber stamped by Geoff Garen.

Source/JavaScriptCore:

Reverting https://bugs.webkit.org/show_bug.cgi?id=51395

* yarr/YarrPattern.cpp:
(JSC::Yarr::YarrPatternConstructor::atomParenthesesEnd):

LayoutTests:

Reverted https://bugs.webkit.org/show_bug.cgi?id=51395, and added
test cases for /(|a)/ and /(a|)/, to test the evaluation order of
subpattern matches with empty alternatives.

* fast/regex/parentheses-expected.txt:
* fast/regex/script-tests/parentheses.js:
* fast/regex/script-tests/slow.js:
* fast/regex/slow-expected.txt:



Canonical link: https://commits.webkit.org/76199@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86547 268f45cc-cd09-0410-ab3c-d52691b4dbfc