Source/JavaScriptCore/yarr/YarrPattern.cpp
@@ -491,19 +491,8 @@ public:
 
         unsigned numParenAlternatives = parenthesesDisjunction->m_alternatives.size();
         unsigned numBOLAnchoredAlts = 0;
-        bool containsEmptyAlternative = false;
 
         for (unsigned i = 0; i < numParenAlternatives; i++) {
-            if (!parenthesesDisjunction->m_alternatives[i]->m_terms.size() && numParenAlternatives > 1) {
-                PatternAlternative* altToRemove = parenthesesDisjunction->m_alternatives[i];
-                parenthesesDisjunction->m_alternatives.remove(i);
-                delete altToRemove;
-                --numParenAlternatives;
-
-                containsEmptyAlternative = true;
-                continue;
-            }
-
             // Bubble up BOL flags
             if (parenthesesDisjunction->m_alternatives[i]->m_startsWithBOL)
                 numBOLAnchoredAlts++;
@@ -518,28 +507,6 @@ public:
 
         lastTerm.parentheses.lastSubpatternId = m_pattern.m_numSubpatterns;
         m_invertParentheticalAssertion = false;
-
-        if (containsEmptyAlternative) {
-            // Backup and remove the current disjunction's alternatives.
-            Vector<PatternAlternative*> alternatives;
-            alternatives.append(parenthesesDisjunction->m_alternatives);
-            parenthesesDisjunction->m_alternatives.clear();
-            PatternAlternative* alternative = parenthesesDisjunction->addNewAlternative();
-
-            // Insert a new non-capturing parentheses.
-            unsigned subpatternId = m_pattern.m_numSubpatterns + 1;
-            PatternDisjunction* newDisjunction = new PatternDisjunction(alternative);
-            m_pattern.m_disjunctions.append(newDisjunction);
-            alternative->m_terms.append(PatternTerm(PatternTerm::TypeParenthesesSubpattern, subpatternId, newDisjunction, false, false));
-            newDisjunction->m_alternatives.append(alternatives);
-
-            // Set the quantifier of the new parentheses to '?' and set the inherited properties.
-            PatternTerm& disjunctionTerm = alternative->lastTerm();
-            disjunctionTerm.quantify(1, QuantifierGreedy);
-            disjunctionTerm.parentheses.lastSubpatternId = m_pattern.m_numSubpatterns;
-            alternative->m_containsBOL = m_alternative->m_containsBOL;
-            alternative->m_startsWithBOL = m_alternative->m_startsWithBOL;
-        }
     }
 
     void atomBackReference(unsigned subpatternId)
