LayoutTests/fast/regex/script-tests/slow.js
@@ -2,6 +2,6 @@ description(
 'Test for expressions that would hang when evaluated due to exponential matching behavior. If the test does not hang it is a success.'
 );
 
-shouldBe('/(?:[^(?!)]||){23}z/.test("/(?:[^(?!)]||){23}z/")', 'true');
+shouldBe('/(?:[^(?!)]||){23}z/.test("/(?:[^(?!)]||){23}z/")', 'false');
 
 var successfullyParsed = true;
